Move src/ to public/vote/

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "config": {
+        "vendor-dir": "public/vendor"
+    },
     "autoload": {
         "classmap": [
             "public/vote/"
