Add functions at functions.php
Add :
- DBControlClass->count_row()
- DBControlClass->select()
- UidClass->get_id()
- UidClass->uid_check()
- UidClass->get_voted_times()

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "phpunit/phpunit": "10"
     },
     "require": {
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "hashids/hashids": "^5.0"
     }
 }
